plugins {
    id 'java'
    id "com.github.johnrengelman.shadow" version "5.1.0"
    id 'application'
}


group 'com.edwin.neural'
version '7.2.1'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

mainClassName = "demos.Sandbox"

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'org.jetbrains:annotations:18.0.0'
    implementation 'org.ujmp:ujmp-core:0.3.0'
    implementation 'org.ojalgo:ojalgo:48.3.0'
    implementation 'org.knowm.xchart:xchart:3.6.0'
    implementation 'me.tongfei:progressbar:0.7.4'
    implementation 'org.slf4j:slf4j-api:1.7.25'
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
    implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'

    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'

    testCompileOnly 'org.projectlombok:lombok:1.18.12'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
}

jar {
    doFirst {
        manifest {
            if (!configurations.compile.isEmpty()) {
                attributes(
                        'Class-Path': configurations.compile.collect { it.toURI().toString() }.join(' '),
                        'Main-Class': 'demos.Sandbox.java')
            }
        }
    }
}


